SET(PROJECT_NAME tetris)
PROJECT(${PROJECT_NAME} C)

CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
SET(CMAKE_C_STANDARD 99)

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
	SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/ CACHE PATH "Install prefix default" FORCE)
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

IF(CMAKE_COMPILER_IS_GNUCC)
	ADD_DEFINITIONS(-Wall -Werror -pedantic -std=c99)
ENDIF(CMAKE_COMPILER_IS_GNUCC)

#
# Configure Project
#
FILE(GLOB_RECURSE SRC_LIST FOLLOW_SYMLINKS ${PROJECT_SOURCE_DIR}/src/*.c)
FILE(GLOB_RECURSE HEAD_FILES FOLLOW_SYMLINKS ${PROJECT_SOURCE_DIR}/include/*.h ${PROJECT_BINARY_DIR}/include/*.h)

#
# Configure Executable and Installation
#
FIND_PACKAGE(Curses REQUIRED)

#
# Set Include Directories
#
INCLUDE_DIRECTORIES(
		"${PROJECT_SOURCE_DIR}/include/"
		"${PROJECT_BINARY_DIR}/include/"
		"${CURSES_INCLUDE_DIR}"
)

ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/src/main.c ${SRC_LIST})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CURSES_LIBRARIES})

INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
