#
# Configure Unit Tests
#
FILE(GLOB_RECURSE TEST_SRC_LIST FOLLOW_SYMLINKS ${PROJECT_SOURCE_DIR}/test/*.c ${PROJECT_SOURCE_DIR}/test/unit/*.c ${PROJECT_SOURCE_DIR}/src/*.c)
LIST(REMOVE_ITEM TEST_SRC_LIST ${PROJECT_SOURCE_DIR}/src/main.c)

INCLUDE_DIRECTORIES(
		"${PROJECT_SOURCE_DIR}/include"
		"${PROJECT_SOURCE_DIR}/test/include/"
		"${CURSES_INCLUDE_DIR}"
)

ADD_EXECUTABLE(${PROJECT_NAME}-unit-tests ${PROJECT_SOURCE_DIR}/test/runner.c ${PROJECT_SOURCE_DIR}/test/test-lib.c ${TEST_SRC_LIST})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}-unit-tests ${CURSES_LIBRARIES})

ADD_TEST(NAME unit-tests COMMAND ${PROJECT_NAME}-unit-tests)
